# xn_esp32_daplink_module

./: .gitignore  BUILD_AND_TEST.md  CMakeLists.txt  DEBUG_GUIDE.md  DEVELOPMENT_PLAN.md  INTEGRATION_COMPLETE.md  PC_CLIENT_GUIDE.md  PHASE1_CHECKLIST.md  PHASE2_CHECKLIST.md  PLAN_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  partitions.csv  sdkconfig.defaults
components/daplink_esp32/: CMakeLists.txt  README.md  idf_component.yml
components/daplink_esp32/dap/: README.md  SW_DP.c  SW_DP.h  dap_handler.c
components/daplink_esp32/hic_hal/esp32s3/: DAP_config.h  daplink_addr.h  gpio.c  uart.c  usb_buf.c
components/daplink_esp32/include/: dap_handler.h  daplink_config.h  esp32_hal.h  usb_init.h
components/daplink_esp32/port/: esp32_port.c
components/daplink_esp32/usb/: usb_descriptors.c  usb_init.c
components/xn_esp_frpc/: CMakeLists.txt  README.md
driver/: DRIVER_INSTALL.md  README.md  esp32s3_daplink.inf  install_driver.ps1  uninstall_driver.ps1  卸载驱动.bat  安装驱动.bat
main/: CMakeLists.txt  dap_handler.h  dap_tcp_server.c  dap_tcp_server.h  idf_component.yml  main.c  tusb_config.h  usb_descriptors.c
s3_daplink_usb/: sdkconfig.defaults
s3_daplink_usb/components/DAP/: CMakeLists.txt
s3_daplink_usb/components/DAP/config/: DAP_config.h
s3_daplink_usb/components/DAP/include/: DAP_config.h  dap_configuration.h  gpio_common.h  gpio_op.h  timer.h
s3_daplink_usb/components/DAP/source/: DAP.c  DAP_vendor.c  SW_DP.c  dap_utility.c  spi_op.c  spi_switch.c
s3_daplink_usb/main/: CMakeLists.txt  dap_handler.c  idf_component.yml  main.c  tusb_config.h  usb_init.c  (+2 more)
(+9 files in other folders)
