idf_component_register(
    SRCS 
        "hic_hal/esp32s3/gpio.c"
        "hic_hal/esp32s3/uart.c"
        "hic_hal/esp32s3/usb_buf.c"
        "port/esp32_port.c"
        "usb/usb_init.c"
        "usb/usb_descriptors.c"
        "dap/dap_handler.c"
    INCLUDE_DIRS 
        "include"
        "hic_hal/esp32s3"
    REQUIRES
        driver
        esp_timer
        freertos
        espressif__esp_tinyusb
        espressif__tinyusb
)
